# practice2022

./: .gitignore  README.md  client.py  file  file_send_receive.py  json_rpc.py  main.py  mypy.ini  pyproject.toml  send_receive.py  server.py  socket_client.py  socket_fabric.py  socket_send_receive.py  socket_server.py
json_rpc/: client.py  json_rpc.py  model.py  server.py
json_rpc/socket_base/: send_recv.py  socket_fabric.py
modules/: client.py  json_rpc.py  practice.code-workspace  server.py
modules/socket_base/: send_recv.py  socket_client.py  socket_fabric.py  socket_server.py
practice2022/json_rpc/: json_rpc.py
practice2022/json_rpc/socket_base/: socket_fabric.py
