[tool.poetry]
name = "practice2022"
version = "0.1.0"
description = "Python API for client-server applications based on JSON-RPC"
authors = ["WriteCoin <sovtsardom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main-run = "main:main"
example = "modules.server:main"
