[tool.poetry]
name = "json_rpc"
version = "0.1.0"
description = "Python API for client-server applications based on JSON-RPC"
authors = ["WriteCoin <sovtsardom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
accessify = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main-run = "main:main"
example = "modules.server:main"
server = "server:main"
client = "client:main"
socket-server = "socket_server:main"
socket-client = "socket_client:main"